favicon 변경, 블로그 이전

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/imcat_64.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#364fc7" />
-    <meta property="image" content="%PUBLIC_URL%/images/imcat_800x400.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/imcat_800x400.png" />
+    <meta property="image" content="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
     <!-- google search -->
     <meta name="google-site-verification" content="HZicODInbBKemFyMPNAa0hZFqxXrvctIKQjKNGjc1g8" />
     <!-- naver search -->
     <meta name="naver-site-verification" content="6a36bfcd58834db8c5d1e177f7e2bb50f07c18bb" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/imcat.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/atom-one-dark.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/index.css" />
     <script src="%PUBLIC_URL%/lib/highlight.pack.js"></script>
@@ -122,7 +122,7 @@
         let interval = setInterval(function () {
           win.close() //팝업창 닫아주기
         }, 10)
-        setTimeout(()=>clearInterval(interval),500)
+        setTimeout(() => clearInterval(interval), 500)
       }
     </script>
     <!-- // 네이버 아이디로 로그인 초기화 Script -->
